# rust-axum

./: Cargo.toml
fallback/: fallback.html
src/: ctx.rs  error.rs  log.rs  main.rs
src/model/: mod.rs
src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
tests/: quick_dev.rs
